@@ -5,6 +5,9 @@ What's New for OpenJPIP
 ! : changed
 + : added
 
+August 16, 2011
+* [antonin] fixed cmake support for openjpip
+
 August 12, 2011
 + [antonin] added cmake support to openjpip
 
